--- a/lab2/index.html
+++ b/lab2/index.html
@@ -6,9 +6,13 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-	<h1>Lab 2 - First HTML</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<h1>Oh shit</h1>
+	<p></p>
 </body>
+<style>
+img {width: 80%;}
+</style>
+<img src="https://i.ytimg.com/vi/6YDoowoYzOI/maxresdefault.jpg" alt="alternatetext">
 <body>
-	<p> Bruch idk if this is working but lets try it </p>
+	<p> Bruh what he doin </p>
 </html>
