--- a/lab2/index.html
+++ b/lab2/index.html
@@ -2,17 +2,9 @@
 <html>
 <head>
 	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
-<body>
-	<h1>Oh shit</h1>
-	<p></p>
-</body>
-<style>
-img {width: 80%;}
-</style>
-<img src="https://i.ytimg.com/vi/6YDoowoYzOI/maxresdefault.jpg" alt="alternatetext">
-<body>
-	<p> Bruh what he doin </p>
+	<body>
+		<div id="content">
+		<h2>CONNER</h2>
 </html>
