--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 2 - HTML & CSS</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 	<body>
 		<div id="content">
-		<h2>CONNER</h2>
+			<h1>Hello World</h1>
+
+			<p>this is a test</p>
+			<img src="opp.png"
+		</div>
+	</body>
 </html>
