--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="">
-<head>
-	<title>Lab 2 - HTML & CSS</title>
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-</head>
+<html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<title>Lab 2 - HTML & CSS</title>
+		<link rel="stylesheet" type="text/css" href="css/lab.css">
+	</head>
 	<body>
 		<div id="content">
-			<h1>Hello World</h1>
 
-			<p>this is a test</p>
-			<img src="opp.png"
+			<h1>Hello</h1>
+
+			<p>A render of Brimborn Steel Co.</p>
+
+			<img src="img/brimbornfinal.jpg" alt="brimborn steel">
 		</div>
 	</body>
 </html>
