--- a/lab2/index.html
+++ b/lab2/index.html
@@ -7,11 +7,19 @@
 	</head>
 	<body>
 		<div id="content">
-			<h1>Hello</h1>
+			<h1>Hello World</h1>
+			<p>My render of Minolta film camera in Blender.</p>
+			<img src="img/3d92bbf5-a7f2-4ea3-b416-0aa499309682_rw_1920.jpg">
+				<br>
+				<a href="https://connermurphy.myportfolio.com/">my website</a>
 
-			<p>A render of Brimborn Steel Co.</p>
-
-			<img src="img/brimbornfinal.jpg" alt="brimborn steel">
+			<h1>Hello World</h>
+			<h2>Will Whitty</h2>
+			<img src="img/Will.jpg">
+			<p> Hi my name is Will Whitty and I use he/him pronouns. I am a fourth year Film and Digital and playing for the UCSC Men's Basketball team. I have a big passion for graphic design. Feel free to check out my Instagram page with the link below!</p>
+				<br>
+				<a href="https://www.instagram.com/hoop.creative/">@hoop.creative</a>
+		</br>
 		</div>
 	</body>
 </html>
