--- a/lab3/index.html
+++ b/lab3/index.html
@@ -6,6 +6,23 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<div id="content">
+		<h1>Conner and Evie's Page<h1>
+		<p>Hi, My name is Evie!<p>
 
+			<img src="img/evie_7579.jpg">
+
+		<p> Hello, this is Conner</p>
+
+			<img id="img/conner_image.jpg" src="" />
+
+			<ul>
+
+				<li><a href="lab2/index.html">Lab 2 File Structures</a></li>
+		 		<li><a href="lab3/index.html">Lab 3 File Structures</a></li>
+				<li><a href="lab4/index.html">Lab 4 File Structures</a></li>
+				<li><a href="lab5/index.html">Lab 5 File Structures</a></li>
+				<li><a href="lab6/index.html">Lab 6 File Structures</a></li>
+	<div>
 </body>
 </html>
