--- a/lab3/index.html
+++ b/lab3/index.html
@@ -7,22 +7,13 @@
 </head>
 <body>
 	<div id="content">
-		<h1>Conner and Evie's Page<h1>
-		<p>Hi, My name is Evie!<p>
-
-			<img src="img/evie_7579.jpg">
-
-		<p> Hello, this is Conner</p>
-
-			<img id="img/conner_image.jpg" src="" />
-
-			<ul>
-
-				<li><a href="lab2/index.html">Lab 2 File Structures</a></li>
-		 		<li><a href="lab3/index.html">Lab 3 File Structures</a></li>
-				<li><a href="lab4/index.html">Lab 4 File Structures</a></li>
-				<li><a href="lab5/index.html">Lab 5 File Structures</a></li>
-				<li><a href="lab6/index.html">Lab 6 File Structures</a></li>
+		<h2>Subject<h2>
+			<p>We ran into a few issues, including linking the site.css file to our art101 homepage .html file. We did some troubleshooting and figured out it was a formatting issue in the site.css file. Additionally, we ran into GitHub issues including locating the live site. We did some troubleshooting and were able to get Evelyn’s site working, but not Conner’s even after repeating the same steps for both.</p>
+		<h2>Difficulties</h2>
+			<p>The subject of the lab was to create a place online where all of our lab indexes were accessible.</p>
+		<h2>Results</h2>
+			<p>We were able to create the site to connect all of our labs to, evidenced by our uploaded link. All our difficulties were able to be solved and we were able to complete the website and the lab.</p>
+			<img src="img/lab3image.png">
 	<div>
 </body>
 </html>
