--- a/lab2/index.html
+++ b/lab2/index.html
@@ -8,11 +8,10 @@
 	<body>
 		<div id="content">
 			<h1>Hello World</h1>
-
-			<p>A render of Minolta film camera.</p>
-
+			<p>My render of Minolta film camera in Blender.</p>
 			<img src="img/3d92bbf5-a7f2-4ea3-b416-0aa499309682_rw_1920.jpg">
-
+				<br>
+				<a href="https://connermurphy.myportfolio.com/">my website</a>
 		</div>
 	</body>
 </html>
