--- a/index.html
+++ b/index.html
@@ -3,26 +3,22 @@
 <head>
 	<title>Lab X - Subject/Topic</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
 <body>
 	<div id="content">
-		<h1>Conner and Evie's Page<h1>
-		<p>Hi, My name is Evie!<p>
+		<h1>Homepage<h1>
 
-			<img src="img/evie_7579.jpg">
-
-		<p> Hello, this is Conner</p>
-
-			<img id="img/conner_image.jpg" src="" />
+		<p> Hi I'm Conner, I'm a 3rd year digital media production student from San Francisco.</p>
+			<img src="img/conner_1355.jpg">
 
 			<ul>
 
-				<li><a href="lab2/index.html">Lab 2 File Structures</a></li>
-		 		<li><a href="lab3/index.html">Lab 3 File Structures</a></li>
-				<li><a href="lab4/index.html">Lab 4 File Structures</a></li>
-				<li><a href="lab5/index.html">Lab 5 File Structures</a></li>
-				<li><a href="lab6/index.html">Lab 6 File Structures</a></li>
-	<div>
+				<li><a href="lab2/">Lab 2: Your First HTML</a></li>
+		 		<li><a href="lab3/index.html">Lab 3: File Structures</a></li>
+				<li><a href="lab4/index.html">Lab 4: File Transfer</a></li>
+				<li><a href="lab5/index.html">Lab 5:</a></li>
+				<li><a href="lab6/index.html">Lab 6:</a></li>
+	</div>
 </body>
 </html>
