--- a/lab4/index.html
+++ b/lab4/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<title>Lab 4 - Pseudocoding</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
@@ -51,7 +50,9 @@
 	<h2>Problems</h2>
 		<p> We only had minor issues with this lab, the biggest being .css formatting issues, but some troubleshooting took care of those. Other than that, we didn’t really run into any issues thankfully. One problem we faced is formatting  </p>
   <h2>Results</h2>
+		<p> everything was successful, see screenshot below </p>
 	  <img src="img/lab4image.png">
+
 </div>
 
 </body>
