--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Lab 5 - Data Types and Variables</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<h1>Script Output</h1>
+		<div class=output>
+	        <script type="text/javascript" src="js/lab.js"></script>
+		</div>
+	<img src="img/ford_taurus_2009.jpg">
+
+	<div>
+		<h2>Challenge</h2>
+			<p>The point of the lab was straightforward, and we were able to complete it fairly quickly. I knew what to do for the JavaScript part with the help of the screenshots, but I'm still wrapping my head around what each aspect does. </p>
+		<h2>Problems</h2>
+			<p> We only had minor issues with this lab, the biggest being trivial .js formatting issues, but my partner knew her way around JavaScript and caught a few formatting mistakes I made, so we didn't run into any major problems thankfully. </p>
+	  <h2>Results</h2>
+			<p> everything was successful, this was the most straightforward and issue-free lab so far. I feel like usually there ends up being a lot of troubleshooting, but we only ran into a few minor issues that we managed to resolve fairly quickly. </p>
+	</div>
 
 </body>
 </html>
