--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Lab 6 - Arrays and Objects</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+<div id="content">
+	<h1>Lab 6 - Arrays and Objects </h1>
+  	<img id ="taurus" src="img/ford_taurus_2009.jpg">
 
+  <h2>Challenges</h2>
+		<p>For lab 6 we are meant to create a js variables in the console about what we use for trasportation. Then we use that to create a js program and link that to our lab 6 indext.html. A problem that was ran into was me having formatting issues again with my js file causing it to not appear in my index.html file.</p>
+	<h2>Results</h2>
+		<p>The results can be seen below with the js output, and this page in general.</p>
+
+         <h2>Script Output</h2>
+           <script type="text/javascript" src="js/lab.js"></script>
+
+</div>
 </body>
 </html>
