--- a/lab7/index.html
+++ b/lab7/index.html
@@ -7,12 +7,11 @@
 	<body>
   	<div id="content">
   		<h2>Challenges</h2>
-			<p>For lab 6 we are meant to create a js variables in the console about what we use for trasportation. Then we use that to create a js program and link that to our lab 6 indext.html. A problem that was ran into was me having formatting issues again with my js file causing it to not appear in my index.html file.</p>
+			<p>For lab 7, the main challenge was making sure that our JavaScript files worked correctly.</p>
 			<h2>Problems</h2>
-			<p>----------</p>
+			<p>We followeed instructions closely, so we ran into minimal issues.</p>
 			<h2>Results</h2>
 			<p>The results can be seen below with the js output, and this page in general.</p>
-			<img id ="taurus" src="img/ford_taurus_2009.jpg">
 			<div>
 	 			<h3>Script Output</h3>
 	 			<script src="js/lab.js"></script>
