--- a/lab8/index.html
+++ b/lab8/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Lab 8 - Anon Functions and Callbacks</title>
-		<link rel="stylesheet" type="text/css" href="css/lab.css">
-    <script src="js/lab8.js"></script>
+		 <title>Lab 8 - Anon Functions and Callbacks</title>
+	 	 <link rel="stylesheet" type="text/css" href="css/lab.css">
+     <script src="js/lab.js"></script>
 	</head>
 	<body>
   	<div id="content">
