--- a/lab8/index.html
+++ b/lab8/index.html
@@ -13,6 +13,7 @@
 			<p>We followeed instructions closely, so we ran into minimal issues.</p>
 			<h2>Results</h2>
 			<p>The results can be seen below with the js output, and this page in general.</p>
+			<script src="js/lab.js"></script>
 		</div>
 	</body>
 </html>
