--- a/lab8/index.html
+++ b/lab8/index.html
@@ -12,8 +12,11 @@
 			<h2>Problems</h2>
 			<p>We followeed instructions closely, so we ran into minimal issues.</p>
 			<h2>Results</h2>
-			<p>The results can be seen below with the js output, and this page in general.</p>
+			<p>Check the console to see the results!</p>
 			<script src="js/lab.js"></script>
+		</div>
+		
+		<div id="output">
 		</div>
 	</body>
 </html>
