--- a/lab15/index.html
+++ b/lab15/index.html
@@ -10,14 +10,15 @@
     <div id="output">
     <div id="content">
       <h2>Challenge</h2>
-      <p>For lab 11, the main challenge was making sure that our JavaScript files worked correctly.</p>
+      <p>For lab 15, the main challenge was making sure that our JavaScript files worked correctly.</p>
       <h2>Problems</h2>
       <p>The biggest issue was related to the code I wrote, and the fact that I didn't know where to start troubleshooting.</p>
       <h2>Results</h2>
       <p>Try the button!.</p>
 
-      <button id="mybutton">Try it</button>
-      <p id="demo"></p>
+      <button id="my-button">
+      press
+      </button>
 
     </div>
   </body>
