--- a/lab10/index.html
+++ b/lab10/index.html
@@ -8,6 +8,8 @@
 
 	<body>
   	<div id="content">
+
+
   		<h2>Challenges</h2>
 			<p>For lab 10, the main challenge was making sure that our JavaScript files worked correctly.</p>
 			<h2>Problems</h2>
@@ -15,11 +17,11 @@
 			<h2>Results</h2>
 			<p>We're getting there! But not everythign worked.</p>
 		</div>
-
-		<button id="mybutton">Try it</button>
-
-		<p id="demo"></p>
-
+		<div>
+			<input type="text" id="user-name"><br>
+			<button id="my-button">Submit</button>
+			<div id="output"></div>
+		</div>
 	</body>
 
 </html>
